--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -497,7 +497,7 @@
         <Setter Property="BorderThickness" Value="0,0,1,0"/>
         <Setter Property="BorderBrush" Value="#FFFFFF"/>
         <Setter Property="Padding" Value="0,0,0,0"/>
-        <Setter Property="FontSize" Value="25"/>
+        <Setter Property="FontSize" Value="22"/>
         <Setter Property="Height" Value="35"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
@@ -513,6 +513,7 @@
         <Setter Property="Padding" Value="10,5,10,5"/>
         <Setter Property="FontSize" Value="28"/>
         <Setter Property="Margin" Value="0,5,0,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
     <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
         <Setter Property="IsTabStop" Value="False"/>
