--- a/Display/ShippingList.xaml
+++ b/Display/ShippingList.xaml
@@ -32,70 +32,64 @@
                 <Grid Grid.Column="0" Grid.Row="0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="900*"/>
-                        <ColumnDefinition Width="300"/>
+                        <ColumnDefinition Width="400"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Viewbox Stretch="Uniform">
-                            <TextBlock Text="{Binding ShippingDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年6月3日}" Style="{StaticResource TextDate}" 
+                    <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding ShippingDate, Converter={StaticResource DateTimeConverter}, FallbackValue=2024年6月3日}" Style="{StaticResource TextDate}" 
                                Foreground="{Binding ShippingDate, Converter={StaticResource DateTimeToDayOfWeekBrushConverter}, FallbackValue=#666666}" Opacity="0.8"/>
-                        </Viewbox>
-                    </StackPanel>
                 </Grid>
                 <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                           ColumnHeaderStyle="{StaticResource DefultHeader}">
                     <!-- 項目設定 -->
                     <DataGrid.Columns>
-                        <DataGridTemplateColumn Header="取引先" Width="250">
+                        <DataGridTemplateColumn Header="納品場所" Width="450">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 略称}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="納品場所" Width="330">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 納品場所}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                                    </StackPanel>
+                                    <Grid Height="36">
+                                        <TextBlock Text="{Binding 取引先名}" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="22" FontWeight="Bold" Foreground="#666666"/>
+                                    </Grid>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                         <DataGridTemplateColumn Header="品番" Width="300*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 品番}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                                    </StackPanel>
+                                    <TextBlock Text="{Binding 品番}" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold" FontSize="28"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                         <DataGridTemplateColumn Header="納品数" Width="100">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 納品数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                                    </StackPanel>
+                                    <TextBlock Text="{Binding 納品数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="箱数" Width="80">
+                        <DataGridTemplateColumn Header="箱数" Width="70">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 箱数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                                    </StackPanel>
+                                    <TextBlock Text="{Binding 箱数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTemplateColumn Header="端数" Width="80">
+                        <DataGridTemplateColumn Header="端数" Width="70">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical">
-                                        <TextBlock Text="{Binding 端数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                                    </StackPanel>
+                                    <TextBlock Text="{Binding 端数, Converter={StaticResource CurrencyConverter}}" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="#FF0000"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="" Width="70">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Grid Height="36">
+                                        <CheckBox IsChecked="{Binding 印刷, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                  HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource MaterialDesignCheckBox}">
+                                            <CheckBox.LayoutTransform>
+                                                <ScaleTransform CenterX="0" CenterY="0" ScaleX="1.6" ScaleY="1.6"/>
+                                            </CheckBox.LayoutTransform>
+
+                                        </CheckBox>
+                                    </Grid>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
